# router/user_routes.go
@@ -13,6 +13,7 @@ func InitUserRoutes(r *gin.Engine) gin.IRoutes {
 	UserModel := r.Group("/v1")
 	UserModel.POST("/", User.Create)
 	UserModel.POST("/login", User.UserLogin)
+	UserModel.POST("/refreshToken", User.RefreshToken)
 	//UserModel.POST("/register", User.UserRegister)
 	return r
 }
